Removed the removal of the scrollbar from magnificPopup and hid overflow on body when lightbox is open to stop any jumpiness

--- a/app/assets/stylesheets/koi/components/_layout.scss
+++ b/app/assets/stylesheets/koi/components/_layout.scss
@@ -17,6 +17,10 @@ body {
   background: $background-color;
 }
 
+body.lightbox-open {
+  overflow: hidden;
+}
+
 .layout {
   height: 100%;
 }
